--- a/src/index.html
+++ b/src/index.html
@@ -6,9 +6,19 @@
   <base href="/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="shortcut icon" href="/favicon.png" type="image/x-icon">
+  
+  <!-- Google Tag Manager -->
+<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+})(window,document,'script','dataLayer','GTM-KGLJDH4');</script>
+<!-- End Google Tag Manager -->
 </head>
 <body>
-  <app-root></app-root>
+  <app-root>
+    loading...
+  </app-root>
 </body>
 </html>
