fucked up fusebox

--- a/src/index.html
+++ b/src/index.html
@@ -2,8 +2,8 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Ecestudents</title>
-  <base href="/">
+  <title>$title</title>
+  <base href="/"> 
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="shortcut icon" href="/favicon.png" type="image/x-icon">
@@ -17,8 +17,6 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 <!-- End Google Tag Manager -->
 </head>
 <body>
-  <app-root>
-    loading...
-  </app-root>
-</body>
+    <app>Loading...</app>
+    $bundles
 </html>
