--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="shortcut icon" href="/favicon.png" type="image/x-icon">
 
+  <meta name="keywords" content="Entrepreneurship, Rotterdam, Erasmus, University">
+  <meta name="description" content="ECE Students is a study association focused on fostering the entrepreneurial mindset of students on the campus of the Erasmus University Rotterdam.">
+
+
+
   <!-- Google Tag Manager -->
   <script>
     (function(w, d, s, l, i) {
@@ -51,7 +56,7 @@
           display: grid;
           grid-template-columns: 1fr auto 1fr;
           grid-template-rows: 1fr auto 1fr;
-          height:100vh;
+          height: 100vh;
         }
 
         .lds-spinner {
