ranyas little fixes

--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,7 @@
   <base href="/">
   <meta name="theme-color" content="#e55625">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="shortcut icon" href="/favicon.png" type="image/x-icon">
+  <link rel="shortcut icon" href="/favicon.png?v=2" type="image/x-icon">
 
   <meta name="keywords" content="Entrepreneurship, Rotterdam, Erasmus, University">
   <meta name="description" content="ECE Students is a study association focused on fostering the entrepreneurial mindset of students on the campus of the Erasmus University Rotterdam.">
