fixed page title

--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Ecestudents</title>
+  <title>ECE Students | Shaping Ideas</title>
   <base href="/">
   <meta name="theme-color" content="#e55625">
   <meta name="viewport" content="width=device-width, initial-scale=1">
