--- a/src/index.html
+++ b/src/index.html
@@ -6,14 +6,14 @@
   <title>ECE Students | Shaping Ideas</title>
   <base href="/">
   <meta name="theme-color" content="#e55625">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1">
   <link rel="shortcut icon" href="/favicon.png?v=2" type="image/x-icon">
 
   <meta name="keywords" content="Entrepreneurship, Rotterdam, Erasmus, University">
   <meta name="description" content="ECE Students is a study association focused on fostering the entrepreneurial mindset of students on the campus of the Erasmus University Rotterdam.">
 
-
-
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/foundation/6.4.3/js/foundation.min.js"></script>
   <!-- Google Tag Manager -->
   <script>
     (function(w, d, s, l, i) {
