cleaned js import

--- a/src/index.html
+++ b/src/index.html
@@ -12,7 +12,7 @@
   <meta name="keywords" content="Entrepreneurship, Rotterdam, Erasmus, University">
   <meta name="description" content="ECE Students is a study association focused on fostering the entrepreneurial mindset of students on the campus of the Erasmus University Rotterdam.">
 
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+  <!--<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/foundation/6.4.3/js/foundation.min.js"></script>
   <!-- Google Tag Manager -->
   <script>
